--- a/apps/frontend-repo/package.json
+++ b/apps/frontend-repo/package.json
@@ -17,11 +17,13 @@
     "@fontsource/poppins": "^5.2.5",
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "next": "14.2.26",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.2.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
