feat: update package function

--- a/apps/frontend-repo/.env.template
+++ b/apps/frontend-repo/.env.template
@@ -1,6 +1,9 @@
 # set to true for use firebase emulator in local for development purposes
 NEXT_PUBLIC_FIREBASE_EMULATOR=true
 
+NEXT_PUBLIC_API_BASE_URL=""
+NEXT_PUBLIC_FUNCTION_BASE_URL=""
+
 NEXT_PUBLIC_FIREBASE_API_KEY=""
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=""
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
